# safeprompt

./: .gitignore  ARTIFACT_START.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: table2_reentrancy.csv  table2_reentrancy_repair.csv  table3_fp_breakdown.csv  table3_price_manip.csv  table3_price_manip_fp_breakdown.csv  table3_price_manip_repair.csv  table4_reentrancy_comparison.csv  table5_price_manip_comparison.csv  table5_price_manip_comparison_d1.csv  table6_ablation.csv  table7_readonly_reentrancy.csv
docs/: ARTIFACT_NOTES.md  DATA_FORMAT.md  expected_hashes.json
examples/witnesses/: reentrancy_withdraw.json
outputs/demo_repair/: certificate.json  patched.sol  run_summary.json
outputs/tables_md/: table2_reentrancy.md  table2_reentrancy_repair.md  table3_fp_breakdown.md  table3_price_manip.md  table3_price_manip_fp_breakdown.md  table3_price_manip_repair.md  table4_reentrancy_comparison.md  table5_price_manip_comparison.md  table5_price_manip_comparison_d1.md  table6_ablation.md  table7_readonly_reentrancy.md
outputs/tables_tex/: table2_reentrancy.tex  table2_reentrancy_repair.tex  table3_price_manip.tex  table3_price_manip_fp_breakdown.tex  table3_price_manip_repair.tex  table4_reentrancy_comparison.tex  table5_price_manip_comparison_d1.tex  table6_ablation.tex  table7_readonly_reentrancy.tex
safeprompt/: pipeline.py  utils.py
safeprompt/cert/: checker.py
safeprompt/operators/: library.py
safeprompt/rcg/: build_rcg.py
scripts/: reproduce_tables.py  run_demo_repair.py  verify_outputs.py
