[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safeprompt"
version = "0.1.0"
description = "SafePrompt artifact reference implementation and reproducibility scripts"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0.0","numpy>=1.24.0","matplotlib>=3.7.0","tabulate>=0.9.0"]
